--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="/" class="logo">COWLOGIN</a>
+            <a href="./index.html" class="logo">COWLOGIN</a>
             <nav>
                 <ul>
                     <li><a href="#">Giới thiệu</a></li>
