--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 <header>
     <div class="container">
-        <a href="/" class="logo">COWLOGIN</a>
+        <a href="./index.html" class="logo">COWLOGIN</a>
         <nav>
             <ul>
                 <li><a href="#">Giới thiệu</a></li>
@@ -73,7 +73,7 @@
             <Label for="password">Mật Khẩu</Label>
             <input type="password" id="password" placeholder="Nhập mật khẩu">
         </div>
-        <button class="button-login2" onclick="window.location.href='/'">COWLOGIN</button>
+        <button class="button-login2" onclick="window.location.href='./index.html'">COWLOGIN</button>
     </form>
     <div class="pass-forgot"><a href="#">Quên mật khẩu?</a></div>
 
