them trang login thanh cong

--- a/forgot.html
+++ b/forgot.html
@@ -62,7 +62,7 @@
         <div class="text-login">
             <h2 class="chaomung">Bạn quên mật khẩu?</h2>
             <h1>Nhập Email</h1>
-            <p>Chúng tôi có thể gửi hướng dẫn đặt lại mật khẩu đến email liên kết với tài khoản Font Awesome của bạn.
+            <p class="text-notice">Chúng tôi có thể gửi hướng dẫn đặt lại mật khẩu đến email liên kết với tài khoản Font Awesome của bạn.
             </p>
         </div>
         <form>
