--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
             <Label for="password">Mật Khẩu</Label>
             <input type="password" id="password" placeholder="Nhập mật khẩu">
         </div>
-        <button class="button-login2" onclick="window.location.href='./'">COWLOGIN</button>
+        <button class="button-login2" onclick="window.location.href='./logincpl.html'">COWLOGIN</button>
     </form>
     <div class="pass-forgot"><a href="./forgot.html">Quên mật khẩu?</a></div>
 
