them trang da dang nhap

--- a/forgot.html
+++ b/forgot.html
@@ -10,7 +10,7 @@
 <header>
     <div class="container">
         <a href="./" class="logo">COWLOGIN</a>
-        <nav>
+        <nav class="menu-btn">
             <ul>
                 <li><a href="#">Giới thiệu</a></li>
                 <li class="dropdown">
@@ -50,8 +50,8 @@
                     </div>
                 </li>
             </ul>
+            <button class="button-login" onclick="window.location.href='login.html'">Đăng nhập</button>
         </nav>
-        <button class="button-login" onclick="window.location.href='login.html'">Đăng nhập</button>
     </div>
 
 
@@ -62,7 +62,8 @@
         <div class="text-login">
             <h2 class="chaomung">Bạn quên mật khẩu?</h2>
             <h1>Nhập Email</h1>
-            <p class="text-notice">Chúng tôi có thể gửi hướng dẫn đặt lại mật khẩu đến email liên kết với tài khoản Font Awesome của bạn.
+            <p class="text-notice">Chúng tôi có thể gửi hướng dẫn đặt lại mật khẩu đến email liên kết với tài khoản Font
+                Awesome của bạn.
             </p>
         </div>
         <form>
