--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <header>
     <div class="container">
         <a href="./" class="logo">COWLOGIN</a>
-        <nav>
+        <nav class="menu-btn">
             <ul>
                 <li><a href="#">Giới thiệu</a></li>
                 <li class="dropdown">
@@ -51,36 +51,35 @@
                     </div>
                 </li>
             </ul>
+            <button class="button-login" onclick="window.location.href='login.html'">Đăng nhập</button>
         </nav>
-        <button class="button-login" onclick="window.location.href='login.html'">Đăng nhập</button>
     </div>
 </header>
 
-<div class="login-container">
-    <div class="text-login">
-        <h2 class="chaomung">Chào mừng bạn trở lại</h2>
-        <h1>Đăng Nhập</h1>
-        <p>Bắt đầu trải nghiệm học tập và kết nối với mọi người.</p>
-    </div>
-    <form>
-        <div class="label-email">
-            <label for="email">Email</label>
-            <i class="fa-regular fa-envelope"></i>
-            <input type="email" id="email" placeholder="Nhập email đã đăng ký" required>
-        </div>
-        <div class="label-pass">
-            <i class="fa-solid fa-lock"></i>
-            <Label for="password">Mật Khẩu</Label>
-            <input type="password" id="password" placeholder="Nhập mật khẩu">
-        </div>
-        <button class="button-login2" onclick="window.location.href='./logincpl.html'">COWLOGIN</button>
-    </form>
-    <div class="pass-forgot"><a href="./forgot.html">Quên mật khẩu?</a></div>
-
-</div>
-
 <body>
+    <div class="login-container">
+        <div class="text-login">
+            <h2 class="chaomung">Chào mừng bạn trở lại</h2>
+            <h1>Đăng Nhập</h1>
+            <p>Bắt đầu trải nghiệm học tập và kết nối với mọi người.</p>
+        </div>
+        <form id="login-form">
+            <div class="label-email">
+                <label for="email">Email</label>
+                <i class="fa-regular fa-envelope"></i>
+                <input type="email" id="email" placeholder="Nhập email đã đăng ký" required>
+            </div>
+            <div class="label-pass">
+                <i class="fa-solid fa-lock"></i>
+                <Label for="password">Mật Khẩu</Label>
+                <input type="password" id="password" placeholder="Nhập mật khẩu">
+            </div>
+            <button class="button-login2" id="btn-login" type="submit">COWLOGIN</button>
+        </form>
+        <div class="pass-forgot"><a href="./forgot.html">Quên mật khẩu?</a></div>
 
+    </div>
+    <script src="./script/login.js"></script>
 </body>
 
 </html>
