sua role forgot

--- a/forgot.html
+++ b/forgot.html
@@ -62,8 +62,8 @@
         <div class="text-login">
             <h2 class="chaomung">Bạn quên mật khẩu?</h2>
             <h1>Nhập Email</h1>
-            <p class="text-notice">Chúng tôi có thể gửi hướng dẫn đặt lại mật khẩu đến email liên kết với tài khoản Font
-                Awesome của bạn.
+            <p class="text-notice">Chúng tôi có thể gửi hướng dẫn đặt lại mật khẩu đến email liên kết với tài khoản
+                <span style="color:#a64dc7; font-weight: bold;">COWLOGIN</span> của bạn.
             </p>
         </div>
         <form>
@@ -72,7 +72,7 @@
                 <i class="fa-regular fa-envelope"></i>
                 <input type="email" id="email" placeholder="Nhập email đã đăng ký" required>
             </div>
-            <div class="complete"><button class="button-login2" id="btn-login">COWLOGIN</button>
+            <div class="complete"><button class="button-login2" id="btn-login" type="submit">COWLOGIN</button>
                 <div class="complete-text">
                     <a href="./login.html">Chúng tôi đã gửi tin nhắn đến email của bạn.</a>
                 </div>
