them dat lai pass

--- a/forgot.html
+++ b/forgot.html
@@ -5,62 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/forgot.css">
-    <title>Forgot Password</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <title>Đặt Lại Mật Khẩu</title>
 </head>
-<header>
-    <div class="container">
-        <a href="./" class="logo">COWLOGIN</a>
-        <nav class="menu-btn">
-            <ul>
-                <li><a href="#">Giới thiệu</a></li>
-                <li class="dropdown">
-                    <a href="#">Cộng đồng</a>
-                    <div class="dropbox">
-                        <div class="drop-arrow"></div>
-                        <ul class="drop-content">
-                            <li><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>
-                                    Facebook</a></li>
-                            <li><a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i>
-                                    Youtube</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Học tập</a>
-                    <div class="dropbox">
-                        <div class="drop-arrow"></div>
-                        <ul class="drop-content">
-                            <li><a href="#">Phương pháp Pomodoro</a></li>
-                            <li><a href="#">Ghi chú</a></li>
-                            <li><a href="#">To do list</a></li>
-                            <li><a href="#">Đặt câu hỏi</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Thư viện</a>
-                    <div class="dropbox">
-                        <div class="drop-arrow"></div>
-                        <ul class="drop-content">
-                            <li><a href="#">Tài liệu</a></li>
-                            <li><a href="#">Sách</a></li>
-                            <li><a href="#">Dụng cụ học tập</a></li>
-                            <li><a href="#">Khác</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-            <button class="button-login" onclick="window.location.href='login.html'">Đăng nhập</button>
-        </nav>
-    </div>
 
-
-</header>
 
 <body>
+    <header>
+        <div class="container">
+            <a href="./" class="logo">COWLOGIN</a>
+            <nav class="menu-btn">
+                <ul>
+                    <li><a href="#">Giới thiệu</a></li>
+                    <li class="dropdown">
+                        <a href="#">Cộng đồng</a>
+                        <div class="dropbox">
+                            <div class="drop-arrow"></div>
+                            <ul class="drop-content">
+                                <li><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>
+                                        Facebook</a></li>
+                                <li><a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i>
+                                        Youtube</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Học tập</a>
+                        <div class="dropbox">
+                            <div class="drop-arrow"></div>
+                            <ul class="drop-content">
+                                <li><a href="#">Phương pháp Pomodoro</a></li>
+                                <li><a href="#">Ghi chú</a></li>
+                                <li><a href="#">To do list</a></li>
+                                <li><a href="#">Đặt câu hỏi</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Thư viện</a>
+                        <div class="dropbox">
+                            <div class="drop-arrow"></div>
+                            <ul class="drop-content">
+                                <li><a href="#">Tài liệu</a></li>
+                                <li><a href="#">Sách</a></li>
+                                <li><a href="#">Dụng cụ học tập</a></li>
+                                <li><a href="#">Khác</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <button class="button-login" onclick="window.location.href='login.html'">Đăng nhập</button>
+            </nav>
+        </div>
+
+
+    </header>
     <div class="login-container">
         <div class="text-login">
-            <h2 class="chaomung">Bạn quên mật khẩu?</h2>
+            <h2 class="chaomung">Bạn Quên Mật Khẩu?</h2>
             <h1>Nhập Email</h1>
             <p class="text-notice">Chúng tôi có thể gửi hướng dẫn đặt lại mật khẩu đến email liên kết với tài khoản
                 <span style="color:#a64dc7; font-weight: bold;">COWLOGIN</span> của bạn.
@@ -74,7 +76,7 @@
             </div>
             <div class="complete"><button class="button-login2" id="btn-login" type="submit">COWLOGIN</button>
                 <div class="complete-text">
-                    <a href="./login.html">Chúng tôi đã gửi tin nhắn đến email của bạn.</a>
+                    <a href="./repass.html">Chúng tôi đã gửi tin nhắn đến email của bạn.</a>
                 </div>
             </div>
         </form>
