--- a/repass.html
+++ b/repass.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/login.css">
+    <link rel="stylesheet" href="./assets/repass.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <title>Đăng Nhập - Cowlogin</title>
-</head>
 
+    <title>Đặt Lại Mật Khẩu</title>
+</head>
 
 <body>
     <header>
@@ -58,30 +58,35 @@
             </nav>
         </div>
     </header>
-
     <div class="login-container">
         <div class="text-login">
-            <h2 class="chaomung">Chào Mừng Bạn Trở Lại</h2>
-            <h1>Đăng Nhập</h1>
-            <p>Bắt đầu trải nghiệm học tập và kết nối với mọi người.</p>
+            <h2 class="chaomung">Đặt Lại Mật Khẩu Mới!</h2>
+            <h1>Nhập Mật Khẩu</h1>
         </div>
-        <form id="login-form">
-            <div class="label-email">
-                <label for="email">Email</label>
-                <i class="fa-regular fa-envelope"></i>
-                <input type="email" id="email" placeholder="Nhập email đã đăng ký" required>
-            </div>
+        <form>
             <div class="label-pass">
+                <label for="password">Mật khẩu mới</label>
                 <i class="fa-solid fa-lock"></i>
-                <label for="password">Mật Khẩu</label>
-                <input type="password" id="password" placeholder="Nhập mật khẩu">
+                <input type="password" id="password" placeholder="Nhập mật khẩu mới" required>
             </div>
-            <button class="button-login2" id="btn-login" type="submit">COWLOGIN</button>
+            <div class="re-pass">
+                <label for="re-pass">Nhập lại mật khẩu</label>
+                <i class="fa-solid fa-lock"></i>
+                <input type="password" name="repass" id="repass" placeholder="Nhập lại mật khẩu">
+            </div>
+            <div class="complete"><button class="button-repass" id="btn-repass" type="submit">COWLOGIN</button>
+                <div class="complete-text">
+                    <a href="./login.html">Thành công. Nhấn để trở lại trang Đăng Nhập</a>
+                </div>
+                <div class="not-samepass">
+                    <a href="./repass.html">Mật khẩu không khớp. Vui lòng nhập lại</a>
+                </div>
+                <div class="less-type">
+                    <a href="./repass.html">Mật khẩu ít nhất 8 ký tự.</a>
+                </div>
+            </div>
         </form>
-        <div class="pass-forgot"><a href="./forgot.html">Quên mật khẩu?</a></div>
-
-    </div>
-    <script src="./script/login.js"></script>
+        <Script src="./script/repass.js"></Script>
 </body>
 
 </html>
