--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                         <div class="dropbox">
                             <div class="drop-arrow"></div>
                             <ul class="drop-content">
-                                <li><a href="#">Phương pháp Pomodoro</a></li>
+                                <li><a href="#">Pomodoro</a></li>
                                 <li><a href="#">Ghi chú</a></li>
                                 <li><a href="#">To do list</a></li>
                                 <li><a href="#">Đặt câu hỏi</a></li>
