--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#">Học tập</a>
+                        <a href="#">Khoá học</a>
                         <div class="dropbox">
                             <div class="drop-arrow"></div>
                             <ul class="drop-content">
-                                <li><a href="#">Pomodoro</a></li>
-                                <li><a href="#">Ghi chú</a></li>
-                                <li><a href="#">To do list</a></li>
-                                <li><a href="#">Đặt câu hỏi</a></li>
+                                <li><a href="#">Online</a></li>
+                                <li><a href="#">Offline</a></li>
+                                <li><a href="#">Học thử</a></li>
                             </ul>
                         </div>
                     </li>
@@ -50,7 +49,7 @@
                             <ul class="drop-content">
                                 <li><a href="#">Tài liệu</a></li>
                                 <li><a href="#">Sách</a></li>
-                                <li><a href="#">Dụng cụ học tập</a></li>
+
                                 <li><a href="#">Khác</a></li>
                             </ul>
                         </div>
